
[project]
name = "django-enetra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
# Django omeof is old with some oemof packages depending on <3.12 for distutils
requires-python = ">=3.10,<3.11"
dependencies = [
    # celery is part of omeof tabular
    "redis>=6.2.0",
    # for charset detection of files
    "charset-normalizer>=3.4.2",
    # django as webframework<F10>
    "django>=5.2.4",
    # improve updating of larger db queries by improving the queries
    "django-fast-update>=0.2.4",
    # improved forms
    "django-crispy-forms>=2.4",
    # nice progressbars in the terminal
    "tqdm>=4.67.1",
    "oemof-network==0.5.0a1",
    "oemof-tabular",
    "celery>=5.1.2",
    # specified rev via git
    "django-oemof",
    "psycopg2>=2.9.10",
]
[dependency-groups]
dev = [
    # html formatter. only old version available because of omeof dependencies
    # "djlint>=1.36.4",
    "djlint>=0.3.4",
    # Formatter and linter to ensure consistent formatting
    "ruff>=0.12.4",
    # enhancement of django stubs and types to improve
    # type consistenty and lsp support
    "django-stubs>=5.2.2",
    "django-types>=0.22.0",
    # ensure that some checks are made before committing
    # to force commits during work in progress use
    # git commit --no-verify -m "commit message"
    "pre-commit>=4.2.0",
    #  includes the shell_plus which makes the shell experiece better
    # python manage.py shell_plus
    "django-extensions>=4.1",
]
docs = [
    # for automatic generation of mkdoc documentation
    "mike>=2.1.3",
    "mkdocs>=1.6.1",
    "mkdocstrings-python>=1.16.12",
]

# ==== djLint ====
[tool.djlint]
blank_line_after_tag = "load,extends"
Close_void_tags = true
format_css = true
format_js = true
# TODO: remove T002 when fixed https://github.com/djlint/djLint/issues/687
# linter rules can be found here https://www.djlint.com/docs/linter/
ignore = "H006,H030,H031,T002"
include = "H017,H035"
indent = 2
profile = "django"

[tool.djlint.css]
indent_size = 2

[tool.djlint.js]
indent_size = 2


[tool.ruff]
target-version = "py312"
# Exclude a variety of commonly ignored directories.
extend-exclude = [
    "*/migrations/*.py",
    "staticfiles/*",
]
line-length = 100

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = [
    # Line length of 79
    "E501"
]


[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.format]
# these are default settings, shown here to be more explicit.
# for all default configuration settings see https://docs.astral.sh/ruff/configuration/
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
docstring-code-format = true

[tool.uv.sources]
oemof-tabular = { git = "https://github.com/oemof/oemof-tabular.git", rev = "0b17194eedf4940aa3abdbdb53cdcddb81880d12" }
django-oemof = { git = "https://github.com/rl-institut/django-oemof.git", rev = "v0.18.0" }
